swagger + participation